syntax="proto3";

package srv.permission;

message Permission {
    // @inject_tag: gorm:"primary_key"
    int32 id=1;
    // @inject_tag: gorm:"type:int(11);not null;comment:'父级id'"
    int32 pid=2;
    // @inject_tag: gorm:"type:varchar(100);not null;comment:'名称'"
    string name=3;
    // @inject_tag: gorm:"type:varchar(100);not null;comment:'标签'"
    string label=4;
    // @inject_tag: gorm:"type:varchar(255);not null;comment:'描述'"
    string desc=5;
     // @inject_tag: gorm:"type:tinyint(1);not null;default:1;comment:'启用'"
    bool enable=6;
    // @inject_tag: gorm:"type:datetime;default:null"
    string created_at=7;
    // @inject_tag: gorm:"type:datetime;default:null"
    string updated_at=8;
    // @inject_tag: gorm:"type:datetime;default:null"
    string deleted_at=9;
}

message GetPermissionPageRequest {
    // @inject_tag: form:"name"
    string name=1;
    // @inject_tag: form:"current_page"
    int32 current_page=2;
    // @inject_tag: form:"page_size"
    int32 page_size=3;
}

message GetPermissionPageResponse {
    repeated Permission data=1;
    int32 total=2;
}

message GetPermissionInfoRequest {
    int32 id=1;
}

message GetPermissionInfoResponse {
    Permission data=1;
}

message StorePermissionRequest {
    Permission form=1;
}

message StorePermissionResponse {
    Permission data=1;
}

message UpdatePermissionRequest {
    Permission form=1;
}

message UpdatePermissionResponse {
    Permission data=1;
}

message GetPermissionTreeRequest {
    int32 pid=1;
}

message GetPermissionTreeResponse {
    repeated Permission data=1;
}

message BatchBanPermissionRequest {
    string type=1;
    repeated int32 ids=2;
}

message BatchBanPermissionResponse {
    string status=1;
}

service PermissionService {
    rpc GetPermissionPage(GetPermissionPageRequest) returns(GetPermissionPageResponse){}

    rpc GetPermissionInfo(GetPermissionInfoRequest) returns(GetPermissionInfoResponse){}

    rpc StorePermission(StorePermissionRequest) returns(StorePermissionResponse){}

    rpc UpdatePermission(UpdatePermissionRequest) returns(UpdatePermissionResponse){}

    rpc GetPermissionTree(GetPermissionTreeRequest) returns(GetPermissionTreeResponse){}

    rpc BatchBanPermission(BatchBanPermissionRequest) returns (BatchBanPermissionResponse) {}
}